[project]
name = "barkueue"
version = "0.0.1"
description = "A lightweight task queue, easy to integrate. / 一个轻量级任务队列，易于集成到现有业务系统。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["sqlalchemy>=2.0.0"]

[dependency-groups]
dev = ["mypy>=1.19.0"]
test = [
    "pymssql>=2.3.11",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
