[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barkueue"
version = "0.0.1"
description = "A lightweight task queue, easy to integrate. / 一个轻量级任务队列，易于集成到现有业务系统。"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "feightwywx", email = "kururinmiracle@outlook.com" }]
keywords = ["task-queue", "job-queue", "message-queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["croniter>=6.0.0"]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0.0"]

[project.urls]
Repository = "https://github.com/feightwywx/barkueue"

[dependency-groups]
dev = ["mypy>=1.19.0"]
test = [
    "sqlalchemy>=2.0.0",
    "pymssql>=2.3.11",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/barkueue"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
